fixing overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,12 @@ main {
 
 }
 
+video {
+
+    overflow: hidden;
+    
+}
+
 nav, .nav-wrapper {
 
     background-color: #82ccdd;
